--- a/src/public/styles/general.css
+++ b/src/public/styles/general.css
@@ -10,7 +10,7 @@
     display: grid;
     align-items: center;
     max-height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 @media screen and (max-width: 600px) {
