--- a/src/public/styles/general.css
+++ b/src/public/styles/general.css
@@ -51,8 +51,10 @@ button, a {
 }
 
 footer {
+    display: grid;
+    align-items: center;
+    height: 10vh;
     width: 100%;
-    padding: .5rem 0;
     position: absolute;
     left: 0;
     bottom: 0;
