--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -1,23 +1,3 @@
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    min-height: 10vh;
-}
-
-.logo {
-    font-size: var(--m-font-size);
-    color: white;
-    font-family: 'Nova Round', cursives;
-    align-self: center;
-    margin: 0;
-}
-
-.logo span {
-    color: var(--telemagenta);
-}
-
 .menu {
     display: flex;
     justify-content: space-between;
@@ -28,14 +8,14 @@ header {
 .sign-in {
     padding: 1rem 1.3rem;
     border-radius: var(--l-border-radius);
-    background: var(--telemagenta);
-    color: white;
+    background: var(--second-color);
+    color: var(--first-color);
 }
 
 .sign-in:hover {
-    border: 1px solid var(--telemagenta);
+    border: 1px solid var(--second-color);
     background: transparent;
-    color: var(--telemagenta);
+    color: var(--second-color);
 }
 
 .room-section {
@@ -50,13 +30,13 @@ header {
 .hero-title {
     font-size: var(--m-font-size);
     text-transform: uppercase;
-    color: white;
+    color: var(--first-color);
     text-align: center;
     width: 60%;
 }
 
 .hero-title span {
-    color: var(--telemagenta);
+    color: var(--second-color);
 }
 
 .create-btn{
@@ -64,13 +44,13 @@ header {
     height: 5rem;
     border-radius: var(--l-border-radius);
     color: var(--telemagenta);
-    border: 1px solid var(--telemagenta);
+    border: 1px solid var(--second-color);
 }
 
 .create-btn:hover{
     border-radius: var(--l-border-radius);
-    background: var(--telemagenta);
-    color: white;
+    background: var(--second-color);
+    color: var(--first-color);
 }
 
 /* .btn, .join-input {
@@ -110,11 +90,6 @@ header {
 } */
 
 @media screen and (max-width: 576px) {
-
-    .logo {
-        font-size: var(--s-font-size);
-    }
-
     .menu {
         font-size: var(--xxs-font-size);
     }
