--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -4,11 +4,16 @@
 </head>
 <body class="container">
 
+    <header>
+        <h1 class="logo"><span>WE</span>MOVIE</h1>
+        <p class="room-code">Invite Friends <i class="fa-solid fa-share"></i></p>
+    </header>
+
     <div class="movie-container">
 
-        <p class="room-code"><%= roomId %></p>
-
-        <video class="video" src="/assets/videos/default.mp4" controls></video>
+        <div class="video">
+            <video class="screen" src="/assets/videos/default.mp4" controls></video>
+        </div>
 
         <form class="movie-url-form">
             <input class="movie-url" autocomplete="off" placeholder="URL Video in formato .MP4" type="text" name="movie-url"/>
