--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -5,7 +5,7 @@
 <body class="container">
 
     <header>
-        <h1 class="logo"><span>WE</span>MOVIE</h1>
+        <h1 class="logo"><a href="/"><span>WE</span>MOVIE</a></h1>
         <p class="room-code">Invite Friends <i class="fa-solid fa-share"></i></p>
     </header>
 
