--- a/src/public/styles/room.css
+++ b/src/public/styles/room.css
@@ -82,10 +82,17 @@
     border: 1px solid var(--first-color);
 }
 
+@media screen and (max-width: 576px) {
+    .video {
+        height: 40vh;
+    }
+}
+
 @media screen and (max-width: 972px) {
     
     .video {
         align-items: center;
+
     }
 
     .screen {
