--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,11 +5,11 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="logo"><span>WE</span>MOVIE</h1>
+            <h1 class="logo"><a href="/"><span>WE</span>MOVIE</a></h1>
             
             <nav>
                 <ul class="menu">
-                    <li><a href="/" class="sign-in"><i class="fa-solid fa-user"></i> Sign-In</a></li>
+                    <li><a href="/room/join" class="join-btn bg-scolor-btn">Join Room <i class="fa-solid fa-door-open"></i></a></li>
                 </ul>
             </nav>
         </header>
@@ -19,7 +19,7 @@
             <h1 class="hero-title">Watch your <span>favourite</span> videos with your friends!</h1>
 
             <form action="/room" method="post" class="create-room-form">
-                <button type="submit" class="create-btn btn">Crea Stanza <i class="fa-solid fa-film"></i></button>
+                <button type="submit" class="create-btn bg-fcolor-btn">Create New Room <i class="fa-solid fa-film"></i></button>
             </form>
         </section>
     </div>
