--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -27,6 +27,6 @@
         </ul>
     </div>
 
-    <script src="/scripts/room.js"></script>
+    <script src="/scripts/room.js" type="module"></script>
 
 <%- include('./partials/footer'); -%>
