--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -9,6 +9,16 @@
         <p class="room-code">Invite Friends <i class="fa-solid fa-share"></i></p>
     </header>
 
+    <div class="pop-up-container">
+        <div class="pop-up">
+            <p>Welcome into the room!</p>
+            <form>
+                <input type="text" placeholder="Username" required autocomplete="off">
+                <button type="submit" class="bg-fcolor-btn">Join</button>
+            </form>
+        </div>
+    </div>
+
     <div class="movie-container">
 
         <div class="video">
@@ -17,7 +27,7 @@
 
         <form class="movie-url-form">
             <input class="movie-url" autocomplete="off" placeholder="URL Video in formato .MP4" type="text" name="movie-url"/>
-            <button class="movie-btn" type="submit">Invio</button>
+            <button class="set-url-btn bg-fcolor-btn" type="submit">Invio</button>
         </form>
     </div>
 
