--- a/src/public/styles/general.css
+++ b/src/public/styles/general.css
@@ -51,6 +51,10 @@ button, input {
     border: none;
 }
 
+input {
+    border-radius: var(--l-border-radius);
+}
+
 button, a {
     cursor: pointer;
 }
