--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -22,7 +22,7 @@
     <div class="movie-container">
 
         <div class="video">
-            <video class="screen" src="/assets/videos/default.mp4" controls></video>
+            <video class="screen" playsinline src="/assets/videos/default.mp4" controls></video>
         </div>
 
         <form class="movie-url-form">
