better arrangement of the elements

--- a/src/public/styles/media-queries.css
+++ b/src/public/styles/media-queries.css
@@ -50,6 +50,16 @@
     body .pop-up {
         width: 75%;
     }
+
+    body .screen-container {
+        grid-template-areas: 
+            "video video video video video"
+            "video video video video video"
+            "video video video video video"
+            "members members members members members"
+            "input input input input input"
+        ;
+    }
 }
 
 /* SMALL SIZE */
