--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -19,7 +19,20 @@
         </div>
     </div>
 
-    <div class="movie-container">
+    <main class="screen-container">
+        <div class="video-container">
+            <video class="screen" playsinline src="/assets/videos/default.mp4" controls></video>
+        </div>
+        <div class="members-container"></div>
+        <div class="video-input-container">
+            <form class="movie-url-form">
+                <input class="movie-url" autocomplete="off" placeholder="URL Video in formato .MP4" type="text" name="movie-url"/>
+                <button class="set-url-btn bg-fcolor-btn" type="submit">Invio</button>
+            </form>
+        </div>
+    </main>
+
+    <!-- <div class="movie-container">
 
         <div class="video">
             <video class="screen" playsinline src="/assets/videos/default.mp4" controls></video>
@@ -29,7 +42,7 @@
             <input class="movie-url" autocomplete="off" placeholder="URL Video in formato .MP4" type="text" name="movie-url"/>
             <button class="set-url-btn bg-fcolor-btn" type="submit">Invio</button>
         </form>
-    </div>
+    </div> -->
 
     <div class="history-container">
         <ul class="history-events">
