--- a/src/public/styles/general.css
+++ b/src/public/styles/general.css
@@ -34,6 +34,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
 }
 
 
@@ -111,9 +112,6 @@ footer {
     align-items: center;
     height: 10vh;
     width: 100%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
     color: var(--first-color);
     text-align: center;
 }
