--- a/src/public/styles/room.css
+++ b/src/public/styles/room.css
@@ -50,7 +50,47 @@ body {
     border: 1px solid var(--second-color);
 }
 
-.movie-container {
+.screen-container {
+    height: 80vh;
+    width: 100%;
+
+    display: grid;
+
+    grid-template-rows: repeat(4, 1fr) 0.5fr;
+    grid-template-columns: repeat(5, 1fr);
+    gap: .5rem;
+
+    grid-template-areas: 
+        "video video video video members"
+        "video video video video members"
+        "video video video video members"
+        "video video video video members"
+        "input input input input input"
+    ;
+}
+
+.video-container {
+    grid-area: video;
+}
+
+.screen {
+    width: 100%;
+    height: 100%;
+}
+
+.members-container {
+    grid-area: members;
+    background-color: var(--first-color);
+    border-radius: var(--l-border-radius);
+}
+
+.video-input-container {
+    grid-area: input;
+    display: flex;
+    align-items: center;
+}
+
+/* .movie-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,13 +108,11 @@ body {
 
 .screen {
     height: 100%;
-}
+} */
 
 .movie-url-form {
     width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    margin-top: .5rem;
 }
 
 .movie-url, .movie-btn {
@@ -84,7 +122,7 @@ body {
 }
 
 .movie-url {
-    margin:  0 .3rem 0 0;
+    margin:  0 .2rem 0 0;
     flex: 2;
     border: 1px solid black;
 }
@@ -112,11 +150,11 @@ body {
     margin: .5rem 0;
     border-radius: .5rem;
     padding: 1rem;
-    color: var(--first-color);
-    border: 1px solid var(--first-color);
+    color: var(--second-color);
+    border: 1px solid var(--second-color);
 } 
 
-@media screen and (max-width: 972px) {
+/* @media screen and (max-width: 972px) {
     
     body .video {
         align-items: center;
@@ -127,4 +165,4 @@ body {
         height: auto;
         width: 100%;
     }
-}
+} */
