add member list

--- a/src/public/styles/general.css
+++ b/src/public/styles/general.css
@@ -13,7 +13,7 @@
     --s-font-size: 1.5rem;
     --xs-font-size: 1rem;
     --xxs-font-size: .9rem;
-    --xxs-font-size: .6rem;
+    --xxxs-font-size: .6rem;
 }
 
 * {
