--- a/src/public/styles/room.css
+++ b/src/public/styles/room.css
@@ -56,15 +56,15 @@ body {
 
     display: grid;
 
-    grid-template-rows: repeat(4, 1fr) 0.5fr;
+    grid-template-rows: repeat(3, 1fr) repeat(2, 0.5fr);
     grid-template-columns: repeat(5, 1fr);
     gap: .5rem;
 
     grid-template-areas: 
-        "video video video video members"
-        "video video video video members"
-        "video video video video members"
-        "video video video video members"
+        "video video video video video"
+        "video video video video video"
+        "video video video video video"
+        "members members members members members"
         "input input input input input"
     ;
 }
@@ -82,6 +82,10 @@ body {
     grid-area: members;
     background-color: var(--first-color);
     border-radius: var(--l-border-radius);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow-y: scroll;
 }
 
 .video-input-container {
@@ -90,25 +94,27 @@ body {
     align-items: center;
 }
 
-/* .movie-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 80vh;
-    justify-content: center;
-    width: 100%;
-}
-
-.video {
-    height: 80%;
+.members {
+    max-height: 100%;
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
-.screen {
-    height: 100%;
-} */
+.member {
+    margin: .5rem;
+    text-align: center;
+}
+
+.username {
+    font-weight: bold;
+    font-size: var(--xs-font-size);
+}
+
+.fa-user-tie {
+    font-size: var(--m-font-size);
+}
 
 .movie-url-form {
     width: 100%;
