--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -4,6 +4,8 @@
 </head>
 <body class="container">
 
+    <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+
     <header>
         <h1 class="logo"><a href="/"><span>WE</span>MOVIE</a></h1>
         <p class="room-code">Invite Friends <i class="fa-solid fa-share"></i></p>
