play audio when new user join a room

--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -15,7 +15,7 @@
         <div class="pop-up">
             <p>Welcome into the room!</p>
             <form>
-                <input type="text" placeholder="Username" required autocomplete="off">
+                <input type="text" placeholder="Username" autofocus required autocomplete="off">
                 <button type="submit" class="bg-fcolor-btn">Join</button>
             </form>
         </div>
@@ -23,7 +23,7 @@
 
     <main class="screen-container">
         <div class="video-container">
-            <video class="screen" playsinline src="/assets/videos/default.mp4" controls></video>
+            <video class="screen" playsinline loop src="/assets/videos/default.mp4" controls></video>
         </div>
         <div class="members-container">
             <ul class="members">
