sync current video when a client joins a room

--- a/src/views/join.ejs
+++ b/src/views/join.ejs
@@ -10,8 +10,8 @@
 
         <section class="room-section">
             <form action="/room/join" method="post" class="join-room-form">
-                <input class="join-input" type="text" autocomplete="off" required placeholder="Room ID" name="roomId"/>
-                <button type="submit" class="join-btn bg-fcolor-btn">Join Room <i class="fa-solid fa-film"></i></button>
+                <input class="join-input" type="text" autocomplete="off" required placeholder="ROOM ID" name="roomId"/>
+                <button type="submit" class="join-btn bg-fcolor-btn">JOIN ROOM <i class="fa-solid fa-film"></i></button>
             </form>
         </section>
     </div>
