--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -31,8 +31,8 @@
         </div>
         <div class="video-input-container">
             <form class="movie-url-form">
-                <input class="movie-url" autocomplete="off" placeholder="Video URL" type="text" name="movie-url"/>
-                <button class="set-url-btn bg-fcolor-btn" type="submit">Set Video</button>
+                <input class="movie-url" autocomplete="off" placeholder="VIDEO URL" type="text" name="movie-url"/>
+                <button class="set-url-btn bg-fcolor-btn" type="submit">SET VIDEO</button>
             </form>
         </div>
     </main>
